# BUXDAO

./: .cursorrules  .env.example  .gitignore  CLAIM_MIGRATION_SUMMARY.md  Cargo.toml  README.md  api-server.js  backfill_missing_osyfoods_and_all_users.sql  backfill_missing_user_entries.sql  cleanup_daily_rewards.sql  create-daily-rewards.js  create_initial_rewards.sql  create_missing_claim_accounts.sql  create_user_on_wallet_connect.sql  current_holders.json  dev.js  fix_buxdao5_trigger.sql  fix_claim_accounts.sql  fix_trigger.sql  fix_update_roles.sql  fix_usernames.sql  index.html  migrate_current_daily_rewards.sql  package-lock.json  package.json  postcss.config.js  process_daily_rewards.sql  process_rewards.sql  server.js  swap_daily_rewards_tables.sql  tailwind.config.js  test-discord-commands.js  treasury-config.json  tsconfig.json  update_balances.sql  update_roles_function.sql  vercel.json  vite.config.js  vite.config.js.timestamp-1739916435712-0bf802491470b.mjs
api/: discord-interactions.js  index.js  nft-lookup.js  package.json  server.js  sync-holders-api.cjs  sync-holders.js  sync-nft-ownership.cjs  token-metrics.js  top-holders.js
bux-claim-minimal/: Cargo.toml
bux-exchange-anchor/programs/bux-exchange/: Cargo.toml
bux-exchange-anchor/programs/bux-exchange/src/: lib.rs
bux_claim/: Anchor.toml  (+2 more)
bux_claim/programs/bux_claim/: Cargo.toml
bux_claim/programs/bux_claim/src/: lib.rs
programs/bux-exchange/: Cargo.toml  id.json
programs/bux-exchange/bux-exchange-new/: Cargo.toml  test.json
programs/bux-exchange/bux-exchange-new/src/: lib.rs
programs/bux-exchange/solana-release/: .crates.toml  .crates2.json  version.yml
programs/bux-exchange/src/: lib.rs
(+558 files in other folders)
