[package]
name = "bux-exchange"
version = "0.1.0"
edition = "2021"
description = "BUX Exchange Program for handling token claims"
license = "Apache-2.0"
publish = false

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "=1.14.17"
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
thiserror = "=1.0.31"
borsh = "=0.9.3"

[dev-dependencies]
solana-program-test = "=1.14.17"
solana-sdk = "=1.14.17"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
